--- a/index.html
+++ b/index.html
@@ -7,16 +7,9 @@
   <link rel="stylesheet" href="main.css">
   <link rel="manifest" href="manifest.json">
   <script src="app.js"></script>
-  <title>PWA Name</title>
+  <title>Shade It</title>
 </head>
 <body>
-  <div>
-    <p>
-      Look ma, I'm installable!
-    </p>
-  </div>
-  <marquee behavior="alternate" direction="left">
-      We're a PWA now!
-    </marquee>
+  <iframe src="https://shade-it.vercel.app" title="Shade It"></iframe>
 </body>
 </html>
