--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
   <title>Shade It</title>
 </head>
 <body>
-  <iframe src="https://shade-it.vercel.app" title="Shade It"></iframe>
+  <iframe src="https://kzmm0fuhymjcbmp7cj85.lite.vusercontent.net/" title="Shade It"></iframe>
 </body>
 </html>
