--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <title>Shade It</title>
 </head>
 <body>
-  <iframe src="https://kzmm0fuhymjcbmp7cj85.lite.vusercontent.net/" title="Shade It"></iframe>
+  <iframe src="https://kzmntv68y7xtjohgqpu7.lite.vusercontent.net/dance" title="Shade It" allowfullscreen></iframe>
+
 </body>
 </html>
