--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <title>Shade It</title>
 </head>
 <body>
-  <iframe src="https://kzmntv68y7xtjohgqpu7.lite.vusercontent.net/dance" title="Shade It" allowfullscreen></iframe>
+  <iframe src="https://shade-it.vercel.app" title="Shade It" allowfullscreen></iframe>
 
 </body>
 </html>
